@@ -482,7 +482,8 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"strsplit", do_strsplit, 1, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"abbreviate", do_abbrev, 1, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"make.names", do_makenames, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
-    {"grep", do_grep, 1, 11, 9, {PP_FUNCALL, PREC_FN, 0}},
+    {"grep", do_grep, 0, 11, 9, {PP_FUNCALL, PREC_FN, 0}},
+    {"grepl", do_grep, 1, 11, 9, {PP_FUNCALL, PREC_FN, 0}},
     {"sub", do_gsub, 0, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
     {"gsub", do_gsub, 1, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
     {"regexpr", do_regexpr, 1, 11, 7, {PP_FUNCALL, PREC_FN, 0}},
